working on implementing basic functionality in types and operations